--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -48,7 +48,7 @@
 	        <li><a href="/about">About Me</a></li>
 	      </ul>
 	      <ul class="nav navbar-nav navbar-right">
-	        <li><a href="/signin">Sign In</a></li>
+	        <li><a href="/login">Sign In</a></li>
 	        <li><a href="/signup">Sign Up</a></li>
 		        
 	      </ul>
