--- a/src/templates/dashboard.html
+++ b/src/templates/dashboard.html
@@ -48,7 +48,7 @@
 	        <li><a href="/about">About Me</a></li>
 	      </ul>
 	      <ul class="nav navbar-nav navbar-right">
-	        <li><a href="/signout">Sign Out</a></li>
+	        <li><a href="/logout">Logout</a></li>
 		        
 	      </ul>
 	    </div><!-- /.navbar-collapse -->
@@ -62,7 +62,7 @@
         <div class="col-lg-12 text-center">
           {% if session_user %}
               <h2 class="intro-text">Welcome<b> {{ session_user }}</b>!</h2>
-              <p>Start Your WounderList.</p>
+              <p>Start Your WunderList.</p>
           {% endif %}
           <div class="flash">
             {% with messages = get_flashed_messages() %}
@@ -80,14 +80,13 @@
     <div class="row">
       <div class="box">
         <div class="col-lg-12">
-          <h2 class="title">Fill Out Here</h2>
+          <h2 class="title">Fill Out Here | Bucket List Goals</h2>
 
-          <form action="{{ url_for('add') }}" method="POST" name="wishlist" id="wishform">
-            Title: <input type="text" name="title" id="title" class="form-control" placeholder="Title" />
-            Quantity: <input type="number" name="quantity" id="quantity" class="form-control" placeholder="Quantity needed" />
-            Price: <input type="text" name="price" id="price" class="form-control" placeholder="Average price" />
-            Details: <input type="text" name="details" id="details"
-            class="form-control" placeholder="Personal information: How exactly would your wish look like?" />
+          <form action="{{ url_for('add') }}" method="POST" name="bucketlist" id="bucketlistform">
+            Title: <input type="text" name="title" id="title" class="form-control" placeholder="Cliff Jumping" />
+            Date: <input type="datetime" name="day" id="day" class="form-control" placeholder="DD/MM/YYYY" />
+            Description: <input type="text" name="desc" id="desc"
+            class="form-control" placeholder="Calve's Pen on Lake George, NY. 50+ foot drop into the water." />
             <button type="submit" name="submit" id="Submit" class="btn btn-lg btn-primary btn-block">Submit</button>
           </form>
         </div>
@@ -97,20 +96,20 @@
     <div class="row">
       <div class="box">
         <div class="col-lg-12">
-          <h2 class="title">My WounderList</h2>
+          <h2 class="title">My WunderList</h2>
+          <ul class="mywishlist">
           <ul class="mywishlist">
 
-            {% for wish in wishlists %}
+            {% for Goal in Bucketlist %}
               <li>
-                <h3>{{ wish.title }}</h3>
-                <p>Quantity needed: {{ wish.quantity }}</p>
-                <p>Average price: {{ wish.price }}</p>
-                <p>More personal information: {{ wish.details }}</p>
+                <h3>{{ Goal.title }}</h3>
+                <p>Date: {{ Goal.day }}</p>
+                <p>Description: {{ Goal.desc }}</p>
               </li>
 
-              <strong><a href="/remove?wishid={{ wish.title }}" name="remove">Remove</a></strong>
+              <strong><a href="/remove?bucketlist_id={{ Goal.title }}" name="remove">Remove</a></strong>
             {% else %}
-              <li>No wish has been added yet. Add your wish <a href="#wishform">now!</a></li>
+              <li>No Bucket List Goals Has Been Added Yet. Add Your Goal <a href="#goalform">!</a></li>
             {% endfor %}
 
           </ul>
