Updated HTML pages

--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -4,7 +4,7 @@
   <div class="container">
 	<h1>Sign In to View Your WunderList</h1>
       <h2 class="form-text">Create Your Account Here!</h2>
-<form action="/login" method="post">
+<form action="/login/" method="post">
         <input type="text" placeholder="Username" name="username" value="{{
           request.form.username }}">
          <input type="password" placeholder="Password" name="password" value="{{
