--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -20,7 +20,7 @@
     rel="stylesheet"/>
 	<link href="{{ url_for('static', filename='css/stylesheet.css')}}"
     rel="stylesheet"/>
-	<link href="{{ url_for('static', filename='favicon.ico') }}"
+	<link href="{{ url_for('static', filename='static/favicon.ico') }}"
 	rel="shortcut icon"/>
 	
  </head>
