--- a/src/templates/dashboard.html
+++ b/src/templates/dashboard.html
@@ -61,7 +61,7 @@
       <div class="box">
         <div class="col-lg-12 text-center">
           {% if session_user %}
-              <h2 class="intro-text">Welcome<b> {{ session_user }}</b>!</h2>
+             <!-- <h2 class="intro-text">Welcome<b> {{ session_user }}</b>!</h2>-->
               <p>Start Your WunderList.</p>
           {% endif %}
           <div class="flash">
@@ -84,7 +84,7 @@
 
           <form action="{{ url_for('add') }}" method="POST" name="bucketlist" id="bucketlistform">
             Title: <input type="text" name="title" id="title" class="form-control" placeholder="Cliff Jumping" />
-            Date: <input type="datetime" name="day" id="day" class="form-control" placeholder="DD/MM/YYYY" />
+            Date: <input type="data-toggle" name="date" id="date" class="form-control" placeholder="Date" />
             Description: <input type="text" name="desc" id="desc"
             class="form-control" placeholder="Calve's Pen on Lake George, NY. 50+ foot drop into the water." />
             <button type="submit" name="submit" id="Submit" class="btn btn-lg btn-primary btn-block">Submit</button>
