--- a/src/templates/lists.html
+++ b/src/templates/lists.html
@@ -7,9 +7,8 @@
         <div class="col-lg-12 text-center">
           <form action="{{ url_for('additem')  }}" method="POST" name="wishlist">
             Your Dream: <input type="text" name="title" id="title" class="form-control" placeholder="Title" />
-            Quantity: <input type="number" name="quantity" id="quantity" class="form-control" />
-            Price: <input type="text" name="price" id="price" class="form-control" placeholder="Price" />
-            Details: <input type="text" name="details" id="details" class="form-control" placeholder="Add you description" />
+            Date: <input type="text" name="date" id="date" class="form-control" placeholder="Date" />
+            Details: <input type="text" name="details" id="details" class="form-control" placeholder="Description" />
             <button type="submit" name="submit" id="Submit" class="btn btn-lg btn-primary btn-block">Submit</button>
           </form>
           
