--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -1,30 +1,37 @@
 {% extends "base.html" %}
 {% block content %}
 
-  <div class="container">
-	<h1>Sign In to View Your WunderList</h1>
-      <h2 class="form-text">Create Your Account Here!</h2>
-<form action="/login/" method="post">
-        <input type="text" placeholder="Username" name="username" value="{{
-          request.form.username }}">
-         <input type="password" placeholder="Password" name="password" value="{{
-          request.form.password }}">
-        <input class="btn btn-default" type="submit" value="Login">
-      </form>
-      {% if error %}
-        <p class="error"><strong>Error:</strong> {{ error }}
-      {% endif %}
-	  </br>
-	  <div class="flash">
-         {% with messages = get_flashed_messages() %}
-           {% if messages %}
-             {% for message in messages %}
-               {{ message | safe }}
-             {% endfor %}
-           {% endif %}
-         {% endwith %}
-       </div>
-	  
+ <div class="row">
+      <div class="box">
+        <div class="col-lg-12 text-center">
+		  <div class="flash">
+            {% with messages = get_flashed_messages() %}
+              {% if messages %}
+                {% for message in messages %}
+                  {{ message | safe }}
+                {% endfor %}
+              {% endif %}
+            {% endwith %}
+         </div>
+		 </br>
+		<h1>Sign In to View Your WunderList</h1>
+         <h2 class="form-text">Create Your Account Here!</h2>
+         <form action="/login/" method="post">
+		 
+           <label for="username" class="sr-only">Username</label>
+           <input type="username" name="username" id="username" class="form-control" placeholder="Username" value="{{ request.form.username }}" required autofocus>
+
+           <label for="Password" class="sr-only">Password</label>
+           <input type="password" name="password" id="password" class="form-control" placeholder="Password" value="{{ request.form.password }}" required>
+    
+           <button type="submit" name="submit" id="Submit" value="Signin" class="btn btn-lg btn-primary btn-block">Submit</button>
+         </form>
+          {% if error %}
+            <p class="error"><strong>Error:</strong> {{ error }}
+          {% endif %}
+        </div>
+      </div>
+    </div>
   </div>
   
 {% endblock %}
